# bmmo-protocol-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LibRef.props  README.md  bmmo_protocol_compiler.sln  bmmo_protocol_compiler.vcxproj  bmmo_protocol_compiler.vcxproj.filters  bpc_test.vcxproj  bpc_test.vcxproj.filters  compile_parser.sh  precompile.sh  win_precompile.bat  windows_compile_parser.bat
docs/: BpFile.md  GenCSharp_ZH.md  GenCode.md  GenCpp_ZH.md  GenFields.html  GenFields_ZH.html  GenPython.md  GenPython_ZH.md
example/: example.bp
examples/: bmmo.bp  codegen.bp  errors.bp  example.bp  test.bp
examples/testbench/: README.md  testbench.py
snippets/: functions.cpp  functions.cs  functions.hpp  functions.py  header.cs  header.hpp  header.py  tail.cpp
src/: bmmo_protocol_compiler.c  bpc_cmd.c  bpc_cmd.h  bpc_code_gen.c  bpc_code_gen.h  bpc_encoding.c  bpc_encoding.h  bpc_error.c  bpc_error.h  bpc_fs.c  bpc_fs.h  bpc_semantic_values.c  bpc_semantic_values.h  bpc_ver.h  compiler.l  compiler.y
src/codegen/: codecpp.c  codecs.c  codefbs.c  codehpp.c  codeproto.c  codepy.c
testbenches/: README.md  testbench.cpp  testbench.cs  testbench.py
tests/: main.c  main.h  tests_cmd.c  tests_fs.c  tests_project.c  tests_semantic_values.c
